compiler/actonc/test/typeerrors/ex20.act
f : (str,str) -> str

def f(s : str, a):
    return s * a
